<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.demo.ui.discuss.DisFragment1"
        android:label="@string/it1"
        tools:layout="@layout/fragment_discuss" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.demo.ui.doctor.DoctorFragment"
        android:label="@string/it2"
        tools:layout="@layout/fragment_doctor" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.demo.ui.friend.FriendFragment"
        android:label="@string/it4"
        tools:layout="@layout/fragment_friend" />

</navigation>
